--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,22 +1,50 @@
-html {
-    box-sizing: border-box;
-}
+@import 'vars';
+@import 'global';
+@import 'fonts';
 
-*,
-*::before,
-*::after {
-    box-sizing: inherit;
+.header__top-inner{
+    display: flex;
+    justify-content: space-between;
+    height: 90px;
+    align-items: center;
 }
-
-body {
-    .header {
-        background-image: #fff;
-    } 
-    background-color: #fff;
+.header__text{
+    margin-left: auto;
+    margin-right: 50px;
+    span{
+        color: $red;
+    }
 }
-.box{
+.header__btn{
+    padding: 4px;
+    width: 72px;
+    border-radius: 4px;
+    color: #fff;
+    text-align: center;
     font-size: 12px;
-    margin: 0;
-    padding: 0;
-    display: flex;   
+}
+.header__btn-login{
+    background-color: $green;
+}
+.header__btn-register{
+    background-color: $red;
+    margin-left: 7px;
+}
+.header__menu{
+    background-color: $bg;
+}
+.menu__list{
+    display: flex;
+    align-items: center;
+    height: 60px;
+    li{
+        display: inline-block;
+        & + li{
+            margin-left: 30px;
+        }
+    }
+    a{
+        color: #fff;
+        font-size: 14px;
+    }
 }
