--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -48,3 +48,56 @@
         font-size: 14px;
     }
 }
+.search{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    min-height: 533px;
+}
+.search__inner{
+    color: #fff;
+    padding: 155px 0 100px;
+    text-align: center;
+    &-title{
+        margin-bottom: 28px;
+        font-size: 48px;
+        font-weight: 700;
+        line-height: 72px;
+    }
+    &-text{
+        margin-bottom: 50px;
+        font-size: 20px;
+        line-height: 30px;
+        font-weight: 500;
+    }
+    &-form{
+        max-width: 670px;
+        margin: 0 auto;
+        position: relative;
+        input{
+            display: block;
+            width: 100%;
+            box-shadow: 0px 1px 10px 0px rgba(124, 178, 64, 0.75);
+            border-radius: 4px;
+            height: 56px;
+            border: none;
+            font-size: 14px;
+            font-weight: 500;
+            outline: none;
+            padding-right: 60px;
+            padding-left: 25px;
+            &::placeholder{
+                color: #90a4ae;                
+                font-weight: 500;
+            }
+        }
+        button{
+            position: absolute;
+            border: none;
+            background-color: transparent;
+            outline: none;
+            right: 16px;
+            top: 17px;
+        }
+    }
+}
